--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
   </div>
 
-  
+   <img class="mobile" src="assets/image-hero-mobile.png" alt="">
   
   <div class="all-section">
     <div class="section-title-box">
